--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <li>可以多次点击绿旗运行，运行记录会持续收集。</li>
         <li>
           如果运行了错误的积木，想要清除运行记录，可以按下
-          <code>W+F+空格</code> ，在询问中回答 <code>N</code> 重置运行记录。
+          <code>W</code> + <code>F</code> + <code>空格</code> ，在询问中回答
+          <code>y</code> 重置运行记录。
         </li>
         <li>
           运行完成后，点击停止并保存 .sb3 文件。此时保存的 .sb3
